--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,9 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi, I'm Akshay this my first app
+        <div id="head">
+            <div><img src="http://www.freeiconspng.com/uploads/project-icon-8.png" /></div>
+            <div><h1>IMAD PROJECT</h1></div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
