[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div id="head">
-            <div><img src="http://www.freeiconspng.com/uploads/project-icon-8.png" /></div>
-            <div><h1>IMAD PROJECT</h1></div>
+            <div id="img1"><img src="http://www.freeiconspng.com/uploads/project-icon-8.png" /></div>
+            <div id="headm"><h1>IMAD PROJECT</h1></div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
