--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="head">
-            <div id="img1"><img src="http://www.freeiconspng.com/uploads/project-icon-8.png" /></div>
+            <div><img src="http://www.freeiconspng.com/uploads/project-icon-8.png" id="img1" /></div>
             <div id="headm"><h1>IMAD PROJECT</h1></div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
