--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div id="head">
             <div><img src="http://www.freeiconspng.com/uploads/project-icon-8.png" id="img1" /></div>
-            <div id="headm"><h1>IMAD PROJECT</h1></div>
+            <div id="headm"><h1 style="text-align : center">IMAD PROJECT</h1></div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
