--- a/ui/index.html
+++ b/ui/index.html
@@ -4,9 +4,13 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="head">
+        <div class="head">
             <div><img src="http://www.freeiconspng.com/uploads/project-icon-8.png" id="img1" /></div>
             <div ><h1 id="headm">IMAD PROJECT</h1></div>
+        </div>
+        <div class="head">
+            <a href="#">Home</a>
+            <a href="ui/article-one.html">next page</a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
