--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         </div>
         <div class="head">
             <a href="#">Home</a>
-            <a href="ui/article-one.html">next page</a>
+            <a style="paddidng-left : 20px" href="ui/article-one.html">next page</a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
