[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,8 @@
             <div ><h1 id="headm">IMAD PROJECT</h1></div>
         </div>
         <div class="head">
-            <a href="#">Home</a>
-            <a style="paddidng-left : 20px" href="ui/article-one.html">next page</a>
+            <a class="link" href="#">Home</a>
+            <a class="link" href="ui/article-one.html">next page</a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
