--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+       
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
     <body>
         <div class="head">
