[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,14 +7,14 @@
 
     </head>
     <body>
-        <div class="head">
+        <div id="head">
             <div><img src="http://www.freeiconspng.com/uploads/project-icon-8.png" id="img1" /></div>
-            <div ><h1 id="headm">IMAD PROJECT</h1></div>
+            <h1 id="headm">IMAD PROJECT</h1>
         </div>
-        <div class="head">
+        <nav>
             <a class="link" href="#">Home</a>
             <a class="link" href="ui/article-one.html">next page</a>
-        </div>
+        </nav>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
