--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
             <a class="link" href="ui/article-one.html">next page</a>
         </nav>
 <br>
-            <img src="https://scontent.fbom1-1.fna.fbcdn.net/v/t1.0-1/p160x160/17884225_1467898183283496_8905951057340248619_n.jpg?oh=53f599d7d3d8866ff612d5f57bcc5312&oe=59F16C23" align="center"/>
+            <img id="pro" src="https://scontent.fbom1-1.fna.fbcdn.net/v/t1.0-1/p160x160/17884225_1467898183283496_8905951057340248619_n.jpg?oh=53f599d7d3d8866ff612d5f57bcc5312&oe=59F16C23" align="center"/>
         
         <script type="text/javascript" src="/ui/main.js">
         </script>
