--- a/ui/index.html
+++ b/ui/index.html
@@ -17,6 +17,8 @@
         </nav>
 <br>
             <img id="pro" src="http://www.brandwebdirect.com/images/1393018773Web-Design.png" align="center"/>
+            <br>
+            <h1 align="center">MY FIRST WEB APP.</h1>
         
         <script type="text/javascript" src="/ui/main.js">
         </script>
