[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,6 +1,6 @@
 <html>
     <head><title> article-one</title></head>
     <body>
-        <a href="ui/index.html">back to home</a>
+        <a href="index.html">back to home</a>
     </body>
 </html>
