[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <a class="link" href="#">Home</a>
-            <a class="link" href="ui/article-one.html">next page</a>
+            <a class="link" href="article-one.html">next page</a>
         </nav>
 <br>
             <img  id="pro" src="http://www.brandwebdirect.com/images/1393018773Web-Design.png" align="center"/>
