--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-        <div id="container">
+        <div id="contain">
             
             <h1>Hello</h1>
         </div>
