[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,8 @@
         </h1>
         <hr>
         <h1>it is a bird</h1>
+        <br>
+        <a href="article-one.html">click here</a>
 
             
             
